# athleta

./: .gitignore  README.md  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml  traefik-dynamic.yml
.github/workflows/: build.yml  full-tests.yml  main.yml  ml-tests.yml  nightly-tests.yml  pr-tests.yml  validate-migrations.yml
migrator/: Dockerfile
migrator/conf/: flyway.conf
migrator/sql/: V1__Initial_Schema.sql  V2__Add_RPE_Calibration_Factor_Default.sql  V3__Clean_Workout_Plan.sql  V4__Add_ML_Training_Jobs.sql  V5__Optional_Plan_Description.sql  V6__Drop_Exercise_Tables.sql
monitoring/: prometheus.yml
proto/exercise/v1/: exercise.proto
proto/inference/v1/: inference.proto
scripts/: README.md  migrate.js
services/ai-engine/: .gitignore  API_DOCUMENTATION.md  Dockerfile  README.md  TRAINING_SCIENCE.md  alembic.ini  pyproject.toml  requirements.txt
services/ai-engine/alembic/: env.py
services/ai-engine/alembic/versions/: 001_initial_migration.py  003_advanced_training_features.py  004_ml_infrastructure.py  005_schema_cleanup.py  006_add_pr_tracking.py  007_add_intensity_techniques.py  008_schema_separation.py  009_prescription_history.py
services/ai-engine/app/: auth.py  celery_app.py  config.py  database.py  main.py  seed_data.py
services/ai-engine/app/api/: athletes.py  injury_prevention.py  ml.py  periodization.py  plan_analyzer.py  plan_analyzer_ws.py  prescriptions.py  workouts.py
services/ai-engine/app/ml/: __init__.py  base_model.py  bayesian_ensemble.py  constrained_optimizer.py  feature_engineering.py  feature_scaler.py  model_manager.py  model_selector.py  sequential_features.py  sequential_predictor.py  synthetic_data_generator.py  workout_predictor.py
services/ai-engine/app/models/: __init__.py  athlete.py  exercise.py  exercise_progression.py  form_tracking.py  muscle_group.py  performance_trends.py  personal_records.py  recovery.py  rpe_calibration.py  training_job.py  workout.py  workout_prescription_history.py
services/ai-engine/app/schemas/: __init__.py  athlete.py  plan_analyzer.py  responses.py  workout.py
services/ai-engine/app/services/: exercise_progression.py  exercise_substitutor.py  form_quality_service.py  injury_prevention.py  intensity_technique_service.py  periodization.py  plan_analyzer.py  plan_updater.py  plateau_intervention.py  pr_tracker.py  prescription_generator.py  progressive_overload_engine.py  recovery_analyzer.py  rpe_calibration.py  training_calculations.py  volume_manager.py  warmup_generator.py  workout_scheduler.py
services/ai-engine/app/services/analyzers/: __init__.py  auto_suggester.py  duration_estimator.py  exercise_order.py  history_analyzer.py  ml_recommender.py  muscle_balance.py  periodization_validator.py  prescription_quality.py  recovery_window.py  volume_distribution.py
services/ai-engine/app/tasks/: ml_training.py
services/ai-engine/app/utils/: constants.py
services/ai-engine/scripts/: generate_synthetic_data.py
services/ai-engine/tests/: README.md  conftest.py  factories.py  test_advanced_deload_triggers.py  test_containers.py  test_form_quality_service.py  test_injury_prevention.py  test_ml_integration.py  test_model_selector.py  test_pr_tracker.py  test_recovery_gender_age.py  test_sequential_features.py  test_training_calculations.py  test_warmup_generator.py  test_workout_predictor_upgrade.py
services/ai-engine/tests/integration/: test_complete_workout_workflow.py  test_intensity_techniques_workflow.py  test_progressive_overload_intensity.py  test_recovery_gender_age.py  test_robustness.py  test_synthetic_data.py
services/ai-engine/tests/integration/features/: __init__.py  test_injury_prevention.py  test_intensity_techniques.py
services/ai-engine/tests/integration/journeys/: __init__.py  test_complete_workout_journey.py  test_plateau_intervention_journey.py  test_progressive_overload_journey.py
services/ai-engine/tests/ml/: test_ensemble.py
services/ai-engine/tests/unit/algorithms/: __init__.py  test_recovery_analyzer.py
services/ai-engine/tests/unit/api/: test_workouts.py  test_workouts_intensity_techniques.py
services/ai-engine/tests/unit/calculations/: __init__.py
services/ai-engine/tests/unit/ml/: __init__.py  test_bayesian_ensemble.py  test_ml_integration.py  test_model_selector.py  test_workout_predictor_upgrade.py
services/ai-engine/tests/unit/services/: test_advanced_deload_triggers.py  test_extended_break_detection.py  test_form_quality_service.py  test_intensity_technique_service.py  test_intensity_technique_service_extended.py  test_pr_tracker.py  test_prescription_generator.py  test_recovery_analyzer.py  test_volume_landmarks.py  test_warmup_generator.py
services/api/: .dockerignore  Dockerfile  README.md  drizzle.config.ts  nest-cli.json  package-lock.json  package.json  tsconfig.json
services/api/drizzle/: 0000_ancient_wildside.sql  0000_handy_frank_castle.sql  0000_init_schema.sql  0000_marvelous_piledriver.sql  0001_add_forgot_password.sql  0001_lowly_meggan.sql  0002_add_focus_areas_body_weight.sql  0002_flat_hannibal_king.sql  0003_move_focus_areas.sql  0004_add_intensity_category_and_initial_plan.sql  0004_harsh_wendigo.sql  0005_blue_hex.sql  0006_shiny_juggernaut.sql  0007_seed_muscle_groups.sql  0008_add_muscle_roles.sql  0008_misty_dragon_lord.sql
services/api/proto/: inference.proto
services/api/src/: app.controller.ts  app.module.ts  constants.ts  main.ts
services/api/test/: jest-integration.json
services/auto-regulation-service/: .dockerignore  Dockerfile  README.md  TRAINING_SCIENCE.md  alembic.ini  pyproject.toml
services/auto-regulation-service/alembic/: env.py
services/auto-regulation-service/app/: auth.py  celery_app.py  config.py  database.py  main.py  seed_data.py
services/exercise-inference/: .gitignore  Dockerfile  Makefile  README.md  TESTING.md  go.mod  go.sum  package-lock.json
services/exercise-service/: Dockerfile  Makefile  README.md  go.mod  go.sum
services/muscle-image/: Dockerfile  README.md  README_R2_SETUP.md  composer.json  consumer.php  index.php
(+311 files in other folders)
