[project]
name = "athletai"
version = "1.0.0"
description = "AI-powered progressive overload training system"
authors = [
    {name = "AthleteAI Team"}
]
requires-python = ">=3.11,<3.14"
license = {text = "MIT"}
keywords = ["fitness", "training", "ai", "progressive-overload", "strength-training"]

dependencies = [
    # Core FastAPI dependencies
    "fastapi==0.124.0",
    "uvicorn[standard]==0.38.0",
    "pydantic==2.12.5",
    "pydantic-settings==2.12.0",
    # Database
    "sqlalchemy==2.0.44",
    "psycopg2-binary==2.9.11",
    "alembic==1.17.2",
    # Scientific computing
    "numpy==2.3.5",
    "scipy==1.16.3",
    "scikit-learn==1.7.2",
    # Background tasks
    "celery[redis]>=5.3.1",
    "redis>=7.1.0",
    # Utilities
    "python-dotenv==1.2.1",
    "python-multipart==0.0.20",
    "tensorflow-cpu>=2.20.0", # CPU-only version for smaller Docker images
    # JWT
    "pyjwt[crypto]==2.10.1",
    "pandas>=2.3.3",
    "testcontainers[postgres,redis]>=4.13.3",
]

[project.optional-dependencies]
dev = [
    # Testing
    "pytest==9.0.1",
    "pytest-asyncio==1.3.0",
    "pytest-cov==7.0.0",
    "pytest-mock==3.15.1",
    "freezegun==1.5.5",
    "httpx==0.28.1",
    
    # Code quality
    "black==25.11.0",
    "ruff==0.14.8",
    "mypy==1.19.0",
]

ml = [
    # ML libraries (optional - code handles gracefully if missing)
    "lightgbm>=4.6.0",
]

all = [
    "athletai[dev,ml]",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--verbose",
    "--strict-markers",
    "-m", "not slow",  # Exclude slow tests by default
    "--tb=short",  # Shorter tracebacks for CI
]
markers = [
    "integration: Integration tests (user journeys and workflows)",
    "calculations: Pure calculation/math tests (fast)",
    "algorithms: Complex algorithm tests (business logic)",
    "ml: ML model tests (requires TensorFlow/LightGBM, runs nightly)",
    "smoke: Critical smoke test (complete workout endpoint)",
    "slow: Slow-running tests",
]

[tool.black]
line-length = 100
target-version = ["py313"]
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
  | alembic/versions
)/
'''

[tool.ruff]
line-length = 100
target-version = "py313"
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "C",   # flake8-comprehensions
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]  # unused imports
"tests/*" = ["E501"]      # line length in tests

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
follow_imports = "normal"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tests.*"
ignore_errors = true

[tool.coverage.run]
source = ["app"]
omit = [
    "*/tests/*",
    "*/alembic/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "pass",
]


